udah bisa register

--- a/src/styles/HomePageStyle.css
+++ b/src/styles/HomePageStyle.css
@@ -305,6 +305,10 @@ input{
         animation-fill-mode: forwards;
     }
 
+    .hide-on-mobile{
+        display: none !important;
+    }
+
 }
 
 
