--- a/src/styles/HomePageStyle.css
+++ b/src/styles/HomePageStyle.css
@@ -80,10 +80,10 @@
 nav{
     display: flex;
     justify-content: space-between;
-    position: fixed;
+    /*position: fixed;*/
     top: 0;
     width: 100%;
-    z-index: 1;
+    z-index: 2;
 
 }
 nav div{
@@ -121,6 +121,7 @@ body{
 #right-side .wrapper{
     border-bottom: 3px solid transparent;
     cursor: pointer;
+
 }
 
 #right-side .wrapper:hover{
@@ -143,6 +144,9 @@ input{
     background-color: white;
     margin-top: 18px;
     visibility: hidden;
+    border: 1px solid darkgrey;
+    box-shadow: 0 6px 12px rgba(0,0,0,.175);
+
 }
 
 #cari-wrapper{
