--- a/src/styles/HomePageStyle.css
+++ b/src/styles/HomePageStyle.css
@@ -33,8 +33,8 @@
 }
 
 @keyframes pop-hide-animation {
-    from{background-color: white;transform: translateY(0px);visibility: unset;}
-    to{background-color: transparent;transform: translateY(-20px);visibility: hidden;}
+    from{background-color: white;transform: translateY(0px);visibility: unset;border: 1px solid darkgrey;color: black;}
+    to{background-color: transparent;transform: translateY(-20px);visibility: hidden;border: 0 solid rgba(255, 255, 255, 0);color: transparent}
 }
 
 @keyframes mobile-nav-show-animation {
@@ -81,6 +81,7 @@ nav{
     display: flex;
     justify-content: space-between;
     /*position: fixed;*/
+    left: 0;
     top: 0;
     width: 100%;
     z-index: 2;
@@ -144,8 +145,17 @@ input{
     background-color: white;
     margin-top: 18px;
     visibility: hidden;
-    border: 1px solid darkgrey;
-    box-shadow: 0 6px 12px rgba(0,0,0,.175);
+
+}
+@media only screen and (min-width: 600px) {
+    .child-wrapper{
+        border: 1px solid darkgrey;
+        box-shadow: 0 6px 12px rgba(0,0,0,.175);
+    }
+    #login-wrapper{
+        /*background-color: red;*/
+        margin-left: -120px;
+    }
 
 }
 
@@ -157,7 +167,7 @@ input{
 #masuk-title{
     box-sizing: border-box;
     padding:0 0 !important;
-    display: block; 
+    display: block;
 }
 
 .child-wrapper div{
@@ -173,6 +183,11 @@ input{
 }
 #mobile-button{
     display: none;
+}
+
+#right-side div{
+    max-width: 200px;
+    margin-right: 0;
 }
 
 @media only screen and (max-width: 600px) {
@@ -241,13 +256,13 @@ input{
     }
     #cari-wrapper{
         width: 100%;
-        margin-left: 0px;
+        margin-left: 0;
     }
     #masuk-title{
         display: none;
     }
     .wrapper {
-        border-bottom: 0px !important;
+        border-bottom: 0 !important;
     }
 
     .mobile-nav-item{
