--- a/src/styles/HomePageStyle.css
+++ b/src/styles/HomePageStyle.css
@@ -34,17 +34,18 @@
 
 @keyframes pop-hide-animation {
     from{background-color: white;transform: translateY(0px);visibility: unset;border: 1px solid darkgrey;color: black;}
+    90%{background-color: transparent;transform: translateY(-20px);visibility: hidden;border: 0 solid rgba(255, 255, 255, 0);color: transparent}
     to{background-color: transparent;transform: translateY(-20px);visibility: hidden;border: 0 solid rgba(255, 255, 255, 0);color: transparent}
 }
 
 @keyframes mobile-nav-show-animation {
-    from{transform: translateX(100%);}
-    to{transform: translateX(0%);}
+    from{transform: translateX(100%);display: none;}
+    to{transform: translateX(0%);display: block;}
 }
 
 @keyframes mobile-nav-hide-animation {
-    from{transform: translateX(0%);}
-    to{transform: translateX(100%);}
+    from{transform: translateX(0%);display: block;}
+    to{transform: translateX(100%);display: none;}
 }
 
 
@@ -192,10 +193,17 @@ input{
     margin-right: 0;
 }
 
-@media only screen and (max-width: 600px) {
-    nav{
-        height: 100%;
 
+@media only screen and (max-width: 600px) {
+    .mini-height-mobile{
+        height: 100px;
+    }
+
+    .ultra-height-mobile{
+        height: 100%;
+    }
+
+    nav{
         font-weight: bolder;
     }
     nav img{
@@ -316,12 +324,15 @@ input{
         animation-name: mobile-nav-hide-animation;
         animation-duration: 500ms;
         animation-fill-mode: forwards;
+        display: none;
+        height: 80px;
     }
 
     .mobile-show{
         animation-name: mobile-nav-show-animation;
         animation-duration: 500ms;
         animation-fill-mode: forwards;
+        height: 100%;
     }
 
     .hide-on-mobile{
