--- a/src/styles/HomePageStyle.css
+++ b/src/styles/HomePageStyle.css
@@ -222,7 +222,7 @@ input{
         background-color: white;
         color: black;
         padding: 10px;
-        width: 50%;
+        /*width: 50%;*/
         margin-right: 0;
         height: 100%;
 
@@ -317,7 +317,7 @@ input{
         margin: 3px 0;
         padding: 11px 12px;
         box-sizing: unset;
-        margin-right: -15px;
+        /*margin-right: -15px;*/
     }
 
     #mobile-button:focus{
